// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`route > loadRoutes > 0 routes 1`] = `[]`;

exports[`route > loadRoutes > 1 route no modules 1`] = `
[
  {
    "elements": {},
    "loaded": false,
    "modules": [],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
  },
]
`;

exports[`route > loadRoutes > 1 route with _index.tsx module 1`] = `
[
  {
    "elements": {
      "_index": {
        "Main": {
          "$$typeof": Symbol(react.transitional.element),
          "_owner": null,
          "_store": {},
          "key": null,
          "props": {},
          "type": [Function],
        },
      },
    },
    "loaded": true,
    "modules": [
      {
        "fileName": "_index.tsx",
        "id": "src/_index.tsx",
        "importFn": [Function],
      },
    ],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
  },
]
`;

exports[`route > loadRoutes > 1 route with _page.tsx module with multiple components 1`] = `
[
  {
    "elements": {
      "_page": {
        "Main": {
          "$$typeof": Symbol(react.transitional.element),
          "_owner": null,
          "_store": {},
          "key": null,
          "props": {},
          "type": [Function],
        },
        "Menu": {
          "$$typeof": Symbol(react.transitional.element),
          "_owner": null,
          "_store": {},
          "key": null,
          "props": {},
          "type": [Function],
        },
      },
    },
    "loaded": true,
    "modules": [
      {
        "fileName": "_page.tsx",
        "id": "src/_page.tsx",
        "importFn": [Function],
      },
    ],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
  },
]
`;

exports[`route > loadRoutes > 1 route with _page.tsx module with single components 1`] = `
[
  {
    "elements": {
      "_page": {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": null,
        "props": {},
        "type": [Function],
      },
    },
    "loaded": true,
    "modules": [
      {
        "fileName": "_page.tsx",
        "id": "src/_page.tsx",
        "importFn": [Function],
      },
    ],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
  },
]
`;

exports[`route > loadRoutes > 1 route with _root.tsx module 1`] = `
[
  {
    "elements": {
      "_root": {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": null,
        "props": {},
        "type": [Function],
      },
    },
    "loaded": true,
    "modules": [
      {
        "fileName": "_root.tsx",
        "id": "src/_root.tsx",
        "importFn": [Function],
      },
    ],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
  },
]
`;

exports[`route > loadRoutes > 1 route with _void.tsx module 1`] = `
[
  {
    "elements": {
      "_void": {
        "Main": {
          "$$typeof": Symbol(react.transitional.element),
          "_owner": null,
          "_store": {},
          "key": null,
          "props": {},
          "type": [Function],
        },
      },
    },
    "loaded": true,
    "modules": [
      {
        "fileName": "_void.tsx",
        "id": "src/_void.tsx",
        "importFn": [Function],
      },
    ],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
  },
]
`;

exports[`route > loadRoutes > 1 route with already loaded _page.tsx 1`] = `
[
  {
    "elements": {
      "_page": {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": null,
        "props": {
          "children": "Page",
        },
        "type": "div",
      },
    },
    "loaded": true,
    "modules": [],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
  },
]
`;
